<resources>
    <string name="app_name">Home Service</string>
    <string name="HS">HS</string>
    <string name="HomeService">HomeService</string>
    <string name="actionbar_loginmenu">Login</string>
    <string name="actionbar_logoutmenu">Log Out</string>

    <string name="actionbar_addtocart">Add To Cart</string>
    <string name="password">Password</string>
    <string name="forgetpass">Forgot Password?</string>
    <string name="homecleaning">Home Cleaning</string>
    <string name="pestcontrol">Pest Control</string>
    <string name="painting">Painting</string>
    <string name="skincare">Skin Care</string>
    <string name="hairskin">Hair Care</string>
    <string name="makeup">Make up</string>
    <string name="emailid">Email Id</string>
    <string name="confrimpass">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="mobno">Contact No</string>
    <string name="roomno">Number of rooms</string>
    <string name="address">Address</string>
    <string name="housetype">House Type</string>
    <string name="proceed">PROCEED</string>


    <string name="welcome">Welcome to HomeService. Please Login.</string>
    <string name="comm">Communicate</string>
    <string name="importtxt">Import</string>
    <string name="gallary">Gallary</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string-array name="housetypelist">
        <item>Apartment</item>
        <item>Bungalow</item>
        <item>Farmhouse</item>
        <item>Hotel</item>
        <item>Penthouse</item>
    </string-array>

    <string name="exp">1.Complete Deep Cleaning of all areas of the house including Bathroom,Kitchen,Dining Room,Bedroom
        and Balcony.
        2.Deep Cleaning and cleaning of curtains,sofa set and chairs using Professional grade cleaning solution.
        3.Cleaning equipment and vacuum cleaners by proffessionals cleaning staff.
        4.Deep Cleaning of external surfaces,cabinets and appliance exteriors, and removal of grease and oil stains.
        5.Deep cleaning of floor, WC, seat, sink, fittings and walls.
        6.Deep cleaning of floor, windows, furniture and light fittings.
        7.Deep cleaning grill work and windows.
        8.Dry vacuum cleaning of sofa, carpent, and curtains.
        9.Cleaning of fans,lights,windows,railing,cabinets and switchboards.
    </string>
</resources>
