<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserdetailActivity"
        android:background="#1A272541"
        android:id="@+id/userdetial_layout"
        android:transitionName="signupTrans">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/fnametv"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_margin="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/fname"/>

            <EditText
                    android:id="@+id/fnameet"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:autofillHints="@string/fname"
                    android:background="@drawable/grp2"
                    android:hint="@string/fname"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/lnametv"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_margin="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/lname"/>

            <EditText
                    android:id="@+id/lnameet"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:autofillHints="@string/lname"
                    android:background="@drawable/grp2"
                    android:hint="@string/lname"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/contnotv"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_margin="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/mobno"/>

            <EditText
                    android:id="@+id/contnoet"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="@string/mobno"
                    android:background="@drawable/grp2"
                    android:hint="@string/mobno"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/addtv"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_margin="2dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:text="@string/address"/>

            <EditText
                    android:id="@+id/addet"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="@string/address"
                    android:background="@drawable/grp2"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/roomnotv"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_margin="2dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:text="@string/roomno"/>

            <EditText
                    android:id="@+id/roomnoet"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="@string/roomno"
                    android:background="@drawable/grp2"
                    android:hint="@string/roomno"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="16sp"/>
        </LinearLayout>

        <Button
                android:id="@+id/user_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:background="#272541"
                android:elevation="6dp"
                android:text="@string/proceed"
                android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>