<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegistrationPage"
        android:background="#1A272541">

    <EditText
            android:id="@+id/regEmailTxt"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="@string/emailid"
            android:background="@drawable/unbck"
            android:hint="@string/username"
            android:paddingLeft="50dp"
            android:textColor="#FFFFFF"
            android:textSize="17dp" />

    <EditText
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:id="@+id/regpasswordtxt"
            android:background="@drawable/passbck"
            android:paddingLeft="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
    />
    <EditText
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:autofillHints="@string/password"
            android:hint="@string/confrimpass"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:id="@+id/confirmpasswordtxt"
            android:background="@drawable/passbck"
            android:paddingLeft="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
    />

    <Button
            android:background="@drawable/regbck"
            android:id="@+id/registrationBtn"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:layout_gravity="center"
            android:elevation="4dp"/>

</LinearLayout>